--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
     "bump-version": "zx --quiet scripts/bump-version.mjs"
   },
   "lint-staged": {
-    "*.{mjs,js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint"
-    ],
+    "*.{mjs,js,jsx,ts,tsx}": [],
     "*.{css,less,scss,json,graphql}": [
       "prettier --write"
     ]
@@ -41,28 +38,54 @@
     "@arcblock/did-auth": "^1.18.135",
     "@arcblock/did-auth-storage-nedb": "^1.7.1",
     "@blocklet/sdk": "^1.16.30",
+    "@hookform/resolvers": "^3.9.0",
     "@ocap/client": "^1.18.135",
     "@ocap/mcrypto": "^1.18.135",
     "@ocap/wallet": "^1.18.135",
+    "@prisma/client": "^5.19.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "dotenv-flow": "^4.1.0",
     "express": "^4.19.2",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "lucide-react": "^0.441.0",
+    "multer": "^1.4.5-lts.1",
+    "react-day-picker": "^8.10.1",
+    "react-hook-form": "^7.53.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
+    "zod-express": "^0.0.8"
   },
   "devDependencies": {
     "@arcblock/eslint-config": "^0.3.2",
     "@arcblock/eslint-config-ts": "^0.3.2",
     "@blocklet/js-sdk": "^1.16.30",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/dotenv-flow": "^3.3.3",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.14.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "bumpp": "^9.4.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
@@ -70,13 +93,16 @@
     "lint-staged": "^15.2.7",
     "nodemon": "^3.1.4",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.45",
     "prettier": "^3.3.3",
     "prettier-plugin-import-sort": "^0.0.7",
+    "prisma": "^5.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.24.0",
     "rimraf": "^5.0.7",
     "simple-git-hooks": "^2.11.1",
+    "tailwindcss": "^3.4.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2",
     "vite": "^5.3.5",
@@ -96,5 +122,8 @@
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
